<?xml version="1.0"?>
<package format="2">
  <name>umrobot_navigation</name>
  <version>0.0.0</version>
  <description> The umrobot_navigation package </description>
  <license>Apache 2.0</license>
  <author email="msjun23@gmail.com"></author>
  <author>Seokjun Moon</author>

  <maintainer email="msjun-ubuntu@todo.todo">msjun-ubuntu</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
